# correct_indent

./: .gitignore  Makefile  README.md  codeFormatter.cpp  correct_indent.c  correct_indent_vol2.c  correct_indent_vol3.cpp  indenter.py  subject.c
correct_indent_vol3/: CMakeLists.txt  main.cpp  subject.c  token.hpp
correct_indent_vol3/include/: code_block.hpp  node.hpp  token.hpp  token2.hpp  token3.hpp
correct_indent_vol3/src/: main.cpp
correct_indent_vol4/: CMakeLists.txt
correct_indent_vol4/include/: reader.hpp
include/: code_formatter.hpp  code_parser.hpp
src/: codeFormatter.cpp  code_formatter.cpp
